fixed font size on mobile

--- a/style.css
+++ b/style.css
@@ -164,6 +164,10 @@ a:hover {
 }
 
 @media screen and (orientation:portrait) {
+	body {
+		font-size:4vw;
+	}
+	
 	#container {
 		margin:20px;
 	}
@@ -193,6 +197,7 @@ a:hover {
 	
 	#headerColumnLeft {
 		justify-content:left;
+		width:100%;
 	}
 	
 	#title {
